re PR target/8787 ([DJGPP] GCC fails to emit .intel_syntax when invoked with the -masm=intel on DJGPP)

2003-06-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR target/8787
	* config/i386/djgpp.h (ASM_FILE_START): emit `.intel_syntax'
	if -masm=intel.

From-SVN: r67676